--- a/myApp/templates/layout.html
+++ b/myApp/templates/layout.html
@@ -9,7 +9,7 @@
 <style type="text/css">
 body
 {
-	background: url("../static/map.jpg")
+	background: url("../static/background2.jpg")
 }
 </style>
 <body >
