--- a/myApp/templates/layout_admin.html
+++ b/myApp/templates/layout_admin.html
@@ -10,7 +10,9 @@
 <style type="text/css">
 	body
 	{
-		background: url("../static/map.jpg")
+		background: url("../static/background2.jpg")
+		background-repeat:no-repeat;
+		background-size: cover;
 	}
 </style>
 <body>
