--- a/myApp/templates/results.html
+++ b/myApp/templates/results.html
@@ -5,7 +5,7 @@
 	<p>Here are the articles with keyword "{{keyword}}"</p>
 </div>
 
-<div style="background-color: black; padding:20px">
+<!-- <div style="background-color: black; padding:20px"> -->
 {% for news_row in results|batch(2) %}
 <div class="row">
   {%for news in news_row%}
@@ -70,5 +70,5 @@
 {%endfor%}
 </div>
 {% endfor %}
-</div>
+<!-- </div> -->
 {% endblock %}
