--- a/myApp/templates/search_user.html
+++ b/myApp/templates/search_user.html
@@ -7,7 +7,7 @@
 {% endif %}
 {% endblock %}
 {% block body %}
-<div style="margin: 20px;background-color: white;padding: 20px; opacity: 0.8; color:black;">
+<!-- <div style="margin: 20px;background-color: white;padding: 20px; opacity: 0.8; color:black;"> -->
 <h1>SEARCH</h1>
 <form method='POST' action="">
 	<div class="form-group">
