--- a/myApp/templates/news_user.html
+++ b/myApp/templates/news_user.html
@@ -7,7 +7,7 @@
 {% endif %}
 {% endblock %}
 {% block body %}
-<div style="background-color: black; padding:20px">
+<!-- <div style="background-color: black; padding:20px"> -->
   {% for news_row in khabar|batch(2) %}
 <div class="row">
   {%for news in news_row%}
@@ -96,6 +96,6 @@
 {%endfor%}
 </div>
 {% endfor %}
-</div>
+<!-- </div> -->
 
 {% endblock %}
