--- a/myApp/templates/result_user.html
+++ b/myApp/templates/result_user.html
@@ -13,7 +13,7 @@
   <p>Here are the articles with keyword "{{keyword}}"</p>
   
 </div>
-<div style="background-color: black; padding:20px">
+<!-- <div style="background-color: black; padding:20px"> -->
 {% for news_row in results|batch(2) %}
 <div class="row">
   {%for news in news_row%}
@@ -92,5 +92,5 @@
    {%endfor%}
  </div>
  {% endfor %}
-</div>
+<!-- </div> -->
  {% endblock %}
