--- a/myApp/templates/search.html
+++ b/myApp/templates/search.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block body %}
-<div style="margin: 20px;background-color: white;padding: 20px; opacity: 0.8; color:black;">
+<!-- <div style="margin: 20px;background-color: white;padding: 20px; opacity: 0.8; color:black;"> -->
 <h1>SEARCH</h1>
 <form method='POST' action="">
 	<div class="form-group">
@@ -12,7 +12,7 @@
 	<p><input type="submit" class="btn btn-primary" value="Submit" name = "search"></p>
 	{% include 'includes/_messages.html' %}
 </form>
-</div>
+<!-- </div> -->
 <!-- {% with messages = get_flashed_messages() %}
 {% if messages %}
 <ul class=flashes>
