--- a/myApp/templates/user_home.html
+++ b/myApp/templates/user_home.html
@@ -1,6 +1,6 @@
 {% extends 'layout_user.html' %}
 {% block body %}
-<div style="background-color: black; padding:20px">
+<!-- <div style="background-color: black; padding:20px"> -->
 {% for news_row in homenews|batch(2) %}
 <div class="row">
   {%for news in news_row%}
@@ -93,5 +93,5 @@
    {%endfor%}
  </div>
  {% endfor %}
-</div>
+<!-- </div> -->
  {% endblock %}
