--- a/myApp/templates/result_user.html
+++ b/myApp/templates/result_user.html
@@ -31,7 +31,9 @@
               <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="Like" value = "Like" action ="Like">
                 <i class="material-icons">thumb_up</i>
               </button>       
-              
+             {% if adminloggedin %}
+                 <button class="btn modal-trigger" type= "submit" name="delete" value = "delete" action ="delete">Delete</button>       
+            {% endif %} 
             </form>
             
           </div>
@@ -54,6 +56,7 @@
           <div class="card-action">
             <a href="{{news['url']}}">Go To Site</a>
             <button data-target="modal{{results.index(news)}}" class="btn modal-trigger">Read more</button>
+            
             <div id="modal{{results.index(news)}}" class="modal modal-fixed-footer">
               <div class="modal-content">
                 <h4>{{news['title']}}</h4>
