--- a/myApp/templates/login_admin.html
+++ b/myApp/templates/login_admin.html
@@ -1,4 +1,4 @@
-{% extends 'layout_admin.html' %}
+{% extends 'layout.html' %}
 {% block body %}
 <div style="margin: 20px;background-color: white;padding: 20px; opacity: 0.8; color:black;">
 	<h1>LOGIN</h1>
