--- a/myApp/templates/news_user.html
+++ b/myApp/templates/news_user.html
@@ -8,40 +8,39 @@
 {% endblock %}
 {% block body %}
 <!-- <div style="background-color: black; padding:20px"> -->
-  {% for news_row in khabar|batch(2) %}
+{% for news_row in khabar|batch(2) %}
 <div class="row">
   {%for news in news_row%}
   <div class="col s1">
-  <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="{{news['image']}}" 
-          onerror="this.src='https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/1200px-Flag_of_India.svg.png';">
-          <form method = "POST", action="">
+    <div class="row">
+      <div class="col s12 m7">
+        <div class="card">
+          <div class="card-image">
+            <img src="{{news['image']}}" 
+            onerror="this.src='https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/1200px-Flag_of_India.svg.png';">
+            <form method = "POST", action="">
               <input type = "text" name = "title" value = "{{news.title}}" style="display: none">
               <input type = "text" name = "username" value = "{{un}}" id = "username" style="display: none">
-              <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="Like" value = "Like" action ="Like">
+              <button class="btn-floating halfway-fab waves-effect waves-light blue" type="submit" name="Like" value = "Like" action ="Like" id = "Like">
                 <i class="material-icons">thumb_up</i>
               </button>       
-              
             </form>
           </div>
           <div class="card-content">
             <p>
               <span class="card-title"><u>{{news['title']}}</u></span>
               <b>
-              {% for i in likes  %}
-              {%- if news.title in i.values() %}
-              {{i['count(likes)']}} people liked it.
-              {{break}}
-              {% endif %}
-              {% endfor %}
+                {% for i in likes  %}
+                {%- if news.title in i.values() %}
+                {{i['count(likes)']}} people liked it.
+                {{break}}
+                {% endif %}
+                {% endfor %}
               </b>
             </p>
             {{news['description']}}
           </div>
-        <div class="card-action">
+          <div class="card-action">
             <a href="{{news['url']}}">Go To Site</a>
             <button data-target="modal{{khabar.index(news)}}" class="btn modal-trigger">Read more</button>
             <div id="modal{{khabar.index(news)}}" class="modal modal-fixed-footer">
@@ -57,45 +56,45 @@
                     <i class="material-icons">create</i>
                   </button>         
                 </form>
-               <!--  <ul class="collection">
-                  {% for i in views %}
-                  {%- if news['title'] in i.values() %}
 
-                  <li class="collection-item avatar">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMvm6UclGzn245GcuvQ20eJaY5nugtX7HosGOB43IqogmB_ohz" alt="" class="circle responsive-img" >
-                    <span class="title"><b><i>POSTED_BY</i></b>{{i['user']}}</span>
-                    <p>{{i['comments']}} <br>
-                   </p>
-                   <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-                 </li>
-                 {% endif %}
-                 {% endfor %}
-                 </ul> -->
-                 {% for i in views %}
-                  {% if news['title'] == i['news'] %}
-                  <!-- <li class="collection-item avatar"> -->
-                    <div style="background-color: lightgrey;margin: 5px;padding: 5px">
-                    <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMvm6UclGzn245GcuvQ20eJaY5nugtX7HosGOB43IqogmB_ohz" alt="" class="circle responsive-img" width="40px" >
+                {% for i in views %}
+                {% if news['title'] == i['news'] %}
+                <!-- <li class="collection-item avatar"> -->
+                <div style="background-color: lightgrey;margin: 5px;padding: 5px" id = "comment{{i['uid']}}">
+                  <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMvm6UclGzn245GcuvQ20eJaY5nugtX7HosGOB43IqogmB_ohz" alt="" class="circle responsive-img" width="40px" >
                     <span class="title"><b><i>POSTED_BY: </i></b>{{i['user']}}</span></p>
-                    <p><span class="title"><b><i>COMMENT: </i></b>{{i['comments']}}</span></p></div>
-                 <!-- </li> -->
-                 {% endif %}
-                 {% endfor %}
+                    <p><span class="title"><b><i>COMMENT: </i></b>{{i['comments']}}</span></p>
+                    {% if adminloggedin %}
+                    <p>
+                      <form method = "POST", action="">
+                        <input type = "text" name = "title" value = "{{news.title}}" style="display: none">
+                        <input type = "text" name = "username" value = "{{i['user']}}" id = "user" style="display: none">
+                        <input type = "text" name = "comment" value = "{{i['comments']}}" id = "comment" style="display: none">
+                        <input type = "text" name = "uid" value = "{{i['uid']}}" id = "uid" style="display: none">
+                        <button class="btn-floating  waves-effect waves-light red" type= "submit" name="deleteComment" value = "deleteComment" action ="deleteComment" style = "left: 95%">
+                          <i class="material-icons">cancel</i>
+                        </button>
+                      </form>       
+
+                      {% endif %}
+                    </div>
+                    {% endif %}
+                    {% endfor %}
 
 
-               </div>
-               <div class="modal-footer">
+                  </div>
+                  <div class="modal-footer">
 
-               </div>
-             </div>
-           </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+      {%endfor%}
     </div>
-  </div>
-</div>
-{%endfor%}
-</div>
-{% endfor %}
-<!-- </div> -->
+    {% endfor %}
+    <!-- </div> -->
 
-{% endblock %}
+    {% endblock %}
