--- a/myApp/templates/includes/_navbar_user.html
+++ b/myApp/templates/includes/_navbar_user.html
@@ -47,6 +47,7 @@
     <li><a href="/change_user">Change Username</a></li>
     <li><a href="/change">Change Password</a></li>
     <li><a href="/search">Search</a></li>
+    <li><a href="/bookmarks">Bookmarks</a></li>
     <li><a href="/credits">Credits</a></li>
  </ul>
  
