--- a/myApp/templates/includes/_navbar_admin.html
+++ b/myApp/templates/includes/_navbar_admin.html
@@ -45,6 +45,7 @@
     <li><a href="/logout">Logout</a></li>
     <li><a href="/add">Add Article</a></li>
     <li><a href="/search">Search</a></li>
+    <li><a href="/bookmarks">Bookmarks</a></li>
     <li><a href="/credits">Credits</a></li>
  </ul>
  
